Add support to addAll int[] in Int Collections