@@ -35,10 +35,25 @@ repositories {
     mavenCentral()
 }
 
-compileJava {
-    inputs.property("moduleName", moduleName)
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
+}
 
+java {
+    modularity.inferModulePath = true
+}
+
+compileJava {
     options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation" << "--add-exports" << "java.base/jdk.internal.misc=io.github.joealisson.primitive"
+}
+
+test {
+    useJUnitPlatform()
+    doFirst {
+        def args = jvmArgs
+        args << '--add-exports' << 'java.base/jdk.internal.misc=ALL-UNNAMED'
+        jvmArgs = args
+    }
 }
 
 jar {
@@ -47,13 +62,13 @@ jar {
                 'Build-Timestamp': new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ").format(new Date()),
                 'Automatic-Module-Name': 'io.github.joealisson.primitive',
                 'Build-Revision' : revision,
-                'Build-Version'  : version,
+                'Build-Version'  : archiveVersion,
                 'Build-Jdk'      : buildJDK)
     }
 }
 
 task jarSources(type:Jar){
-    classifier = 'sources'
+    archiveClassifier = 'sources'
     from sourceSets.main.allSource
 }
 
@@ -62,7 +77,7 @@ javadoc {
 }
 
 task javadocJar(type: Jar) {
-    classifier = 'javadoc'
+    archiveClassifier = 'javadoc'
 }
 
 publishing {
